--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.ts",
   "scripts": {
     "test": "mocha --require ts-node/register test/**/*.ts",
-    "build": "tsc",
+    "build": "tsc -p .",
     "postinstall": "npm run build",
     "dev": "ts-node Server.ts",
     "watch": "nodemon --watch 'src/**/*.ts' --exec ts-node Server.ts",
@@ -16,6 +16,7 @@
   "dependencies": {
     "bcrypt": "^3.0.3",
     "body-parser": "^1.18.3",
+    "cors": "2.8.5",
     "dotenv": "6.2.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
@@ -25,6 +26,8 @@
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/chai": "^4.1.7",
+    "@types/cors": "2.8.5",
+    "@types/dotenv": "6.1.1",
     "@types/express": "^4.16.0",
     "@types/jsonwebtoken": "^8.3.0",
     "@types/mocha": "^5.2.5",
