--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "mocha --require ts-node/register test/**/*.ts",
     "build": "tsc -p .",
     "postinstall": "npm run build",
-    "dev": "ts-node Server.ts",
-    "watch": "nodemon --watch 'src/**/*.ts' --exec ts-node Server.ts",
+    "dev": "ts-node server.ts",
+    "watch": "nodemon --watch 'src/**/*.ts' --exec ts-node server.ts",
     "start": "node dist/Server.js"
   },
   "author": "",
