--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "cors": "2.8.5",
     "dotenv": "6.2.0",
     "express": "^4.16.4",
+    "http-status-codes": "1.3.2",
     "jsonwebtoken": "^8.4.0",
+    "lodash": "4.17.11",
     "mongoose": "^5.4.3",
     "winston": "^3.1.0"
   },
@@ -30,6 +32,7 @@
     "@types/dotenv": "6.1.1",
     "@types/express": "^4.16.0",
     "@types/jsonwebtoken": "^8.3.0",
+    "@types/lodash": "4.14.134",
     "@types/mocha": "^5.2.5",
     "@types/mongoose": "^5.3.7",
     "@types/supertest": "^2.0.7",
