--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "main": "dist/server.js",
   "scripts": {
     "test": "mocha --require ts-node/register test/**/*.ts",
-    "build": "tsc -p .",
-    "dev": "nodemon --watch 'src/**/*.ts' --exec ts-node server.ts"
+    "build-ts": "tsc -p .",
+    "postinstall": "npm run build-ts",
+    "dev": "nodemon --watch 'src/**/*.ts' --exec ts-node server.ts",
+    "prod": "nodemon dist/server.js"
+  },
+  "engines": {
+    "node": "8.9.3"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +21,7 @@
     "cors": "2.8.5",
     "dotenv": "6.2.0",
     "express": "^4.16.4",
+    "express-validator": "5.3.1",
     "http-status-codes": "1.3.2",
     "jsonwebtoken": "^8.4.0",
     "lodash": "4.17.11",
