--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lodash": "4.17.11",
     "mongoose": "^5.4.3",
     "mongoose-paginate": "5.0.3",
+    "nodemailer": "6.2.1",
     "winston": "^3.1.0"
   },
   "devDependencies": {
@@ -41,6 +42,7 @@
     "@types/mongoose": "^5.3.7",
     "@types/mongoose-paginate": "5.0.6",
     "@types/supertest": "^2.0.7",
+    "@types/nodemailer": "6.2.0",
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.9",
