--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^5.4.3",
     "mongoose-paginate": "5.0.3",
     "nodemailer": "6.2.1",
+    "pug": "2.0.4",
     "winston": "^3.1.0"
   },
   "devDependencies": {
@@ -41,8 +42,9 @@
     "@types/mocha": "^5.2.5",
     "@types/mongoose": "^5.3.7",
     "@types/mongoose-paginate": "5.0.6",
-    "@types/supertest": "^2.0.7",
     "@types/nodemailer": "6.2.0",
+    "@types/pug": "2.0.4",
+    "@types/supertest": "^2.0.7",
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.9",
