--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "mocha --require ts-node/register test/**/*.ts",
     "build-ts": "tsc -p .",
     "postinstall": "npm run build-ts",
-    "dev": "nodemon --watch 'src/**/*.ts' --exec ts-node server.ts",
+    "start": "npm run serve",
+    "serve": "node dist/server.js",
+    "watch-node": "nodemon --watch 'src/**/*.ts' --exec ts-node server.ts",
     "prod": "nodemon dist/server.js"
   },
   "engines": {
