--- a/.env.default
+++ b/.env.default
@@ -1,2 +1,2 @@
-MONGO_URL=mongodb+srv://sandipnodetype:0AoxtfVg2fvQuNZJ@cluster0-enfms.mongodb.net/test?retryWrites=true&w=majority
+MONGO_URL=mongodb://localhost:27017/nodetypescriptmongoose
 PORT=3000
