--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "dist/server.js",
   "scripts": {
-    "test": "mocha --require ts-node/register test/**/*.ts",
     "build-ts": "tsc -p .",
     "postinstall": "npm run build-ts",
     "start": "npm run serve",
     "serve": "node dist/server.js",
     "watch": "nodemon --watch 'src/**/*.ts' --exec ts-node server.ts",
     "prod": "nodemon dist/server.js",
-    "tslint": "tslint --project tsconfig.json"
+    "test": "mocha --require ts-node/register test/**/*.ts",
+    "lint": "npm run tslint \"Client/**/*.ts\"",
+    "precommit": "npm run lint && npm test",
+    "prepush": "npm run lint"
   },
   "engines": {
     "node": "8.9.3"
