--- a/package.json
+++ b/package.json
@@ -10,7 +10,20 @@
     "start": "npm run serve",
     "serve": "node dist/server.js",
     "watch": "nodemon --watch 'src/**/*.ts' --exec ts-node server.ts",
-    "prod": "nodemon dist/server.js"
+    "prod": "nodemon dist/server.js",
+    "prepush": "npm run tslint",
+    "precommit": "lint-staged"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run tslint:fix && npm run format && pretty-quick --staged"
+    }
+  },
+  "lint-staged": {
+    "{src,test}/**/*.ts*": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "engines": {
     "node": "8.9.3"
