--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "watch": "nodemon --watch 'src/**/*.ts' --exec ts-node server.ts",
     "prod": "nodemon dist/server.js",
     "prepush": "npm run tslint",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "tslint:fix": "tslint --project tsconfig.json --fix"
   },
   "husky": {
     "hooks": {
@@ -61,6 +62,8 @@
     "@types/pug": "2.0.4",
     "@types/supertest": "^2.0.7",
     "chai": "^4.2.0",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.2.1",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.9",
     "supertest": "^3.4.1",
