--- a/package.json
+++ b/package.json
@@ -14,7 +14,17 @@
     "prepush": "npm run tslint",
     "tslint:fix": "tslint --project tsconfig.json --fix"
   },
- 
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run tslint:fix  && pretty-quick --staged"
+    }
+  },
+  "lint-staged": {
+    "{src,test}/**/*.ts*": [
+      "prettier --write",
+      "git add"
+    ]
+  },
   "engines": {
     "node": "8.9.3"
   },
@@ -33,6 +43,8 @@
     "mongoose": "^5.4.3",
     "mongoose-paginate": "5.0.3",
     "nodemailer": "6.2.1",
+    "prettier": "^1.18.2",
+    "pretty-quick": "^1.11.1",
     "pug": "2.0.4",
     "winston": "^3.1.0"
   },
