--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test": "mocha --require ts-node/register test/**/*.ts",
     "prepush": "npm run tslint",
     "tslint": "tslint --project tsconfig.json",
-    "tslint:fix": "tslint --project tsconfig.json --fix"
+    "tslint:fix": "tslint --project tsconfig.json --fix",
+    "precommit": "lint-staged"
   },
   "husky": {
     "hooks": {
