--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "test": "mocha --require ts-node/register test/**/*.ts",
     "prepush": "npm run tslint",
     "tslint": "tslint --project tsconfig.json --fix",
+    "format": "prettier --write \"{,!(node_modules|dist|build|deploy|views|swagger|coverage)/**/}*.{ts,json}\"",
     "tslint:fix": "tslint --project tsconfig.json --fix",
     "precommit": "lint-staged"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run tslint:fix  && pretty-quick --staged"
+      "pre-commit": "npm run tslint:fix && npm run format && pretty-quick --staged"
     }
   },
   "lint-staged": {
