--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "mongoose-paginate": "5.0.3",
     "nodemailer": "6.2.1",
     "pug": "2.0.4",
-    "winston": "^3.1.0"
+    "swagger-ui-express": "^4.0.7",
+    "winston": "^3.1.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@types/bcrypt": "3.0.0",
@@ -48,6 +50,8 @@
     "@types/nodemailer": "6.2.0",
     "@types/pug": "2.0.4",
     "@types/supertest": "^2.0.7",
+    "@types/swagger-ui-express": "^3.0.1",
+    "@types/yamljs": "^0.2.30",
     "chai": "^4.2.0",
     "husky": "3.0.0",
     "mocha": "^5.2.0",
