--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "watch": "nodemon --watch 'src/**/*.ts' --exec ts-node server.ts",
     "prod": "nodemon dist/server.js",
     "test": "mocha --require ts-node/register test/**/*.ts",
-    "prepush": "npm run tslint",
     "tslint": "tslint --project tsconfig.json --fix",
     "format": "prettier --write \"{,!(node_modules|dist|build|deploy|views|swagger|coverage)/**/}*.{ts,json}\"",
     "tslint:fix": "tslint --project tsconfig.json --fix",
@@ -19,7 +18,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run tslint:fix && npm run format && pretty-quick --staged"
+      "pre-commit": "npm run tslint:fix && pretty-quick --staged"
     }
   },
   "lint-staged": {
