--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "author": "Neosoft Tech",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^12.7.1",
     "@types/randomstring": "^1.1.6",
     "bcrypt": "3.0.6",
     "body-parser": "^1.18.3",
