--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "author": "Neosoft Tech",
   "license": "ISC",
   "dependencies": {
+    "@types/moment-timezone": "^0.5.12",
     "@types/node": "^12.7.1",
     "@types/randomstring": "^1.1.6",
     "bcrypt": "3.0.6",
@@ -45,6 +46,8 @@
     "http-status-codes": "1.3.2",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.14",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.26",
     "mongoose": "^5.6.4",
     "mongoose-paginate": "5.0.3",
     "nodemailer": "6.2.1",
