--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/server.js",
   "scripts": {
     "build-ts": "tsc -p .",
+    "prestart": "copyfiles views/**/*.pug dist/",
     "postinstall": "npm run build-ts",
     "start": "npm run serve",
     "serve": "node dist/server.js",
@@ -36,6 +37,7 @@
     "@types/moment-timezone": "^0.5.12",
     "@types/node": "^12.7.1",
     "@types/randomstring": "^1.1.6",
+    "@types/speakeasy": "^2.0.5",
     "bcrypt": "3.0.6",
     "body-parser": "^1.18.3",
     "change-case": "^3.1.0",
@@ -50,11 +52,13 @@
     "moment-timezone": "^0.5.26",
     "mongoose": "^5.6.4",
     "mongoose-paginate": "5.0.3",
+    "nexmo": "^2.4.1",
     "nodemailer": "6.2.1",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
     "pug": "2.0.4",
     "randomstring": "^1.1.5",
+    "speakeasy": "^2.0.0",
     "swagger-ui-express": "^4.0.7",
     "winston": "^3.1.0",
     "yamljs": "^0.3.0"
