Added resend code API

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URL=mongodb+srv://chetan-pawar:Cp9404505646@cluster0-unlf2.mongodb.net/test?retryWrites=true&w=majority
+MONGO_URL=mongodb://localhost/meeting_room
 PORT=3000
 SECRET=f395ac4b864c6b095
 NODE_ENV=dev
