--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,9 @@
       "request": "launch",
       "name": "Launch Program",
       "program": "${workspaceFolder}/Server.ts",
-      "outFiles": ["${workspaceFolder}/dist/Server.js"]
+      "outFiles": [
+        "${workspaceFolder}/dist/Server.js"
+      ]
     }
   ]
 }
